--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -16,6 +16,7 @@
           <span class="main-title-gradient">Welcome</span> to Gallery
         </h1>
         <load src="./partials/back-link.html" />
+        <ul class="gallery"></ul>
       </div>
     </main>
 <script type="module" src="./js/1-gallery.js"></script>
