--- a/src/2-form.html
+++ b/src/2-form.html
@@ -16,6 +16,20 @@
           <span class="main-title-gradient">Welcome</span> to Form
         </h1>
         <load src="./partials/back-link.html" />
+        <div class="cont">
+          <form class="feedback-form" autocomplete="off">
+            <label for="email">
+              <p class="input-name">Email</p>
+              <input class="form-input" type="email" name="email" autofocus />
+            </label>
+            <label for="message">
+              <p class="input-name">Message</p>
+              <textarea class="form-textarea" name="message" rows="8"></textarea>
+            </label>
+            <button class="form-btn" type="submit">Submit</button>
+          </form>
+        </div>
+
       </div>
     </main>
 
